--- a/index.html
+++ b/index.html
@@ -1290,26 +1290,26 @@ body.dark-mode .interaction-notification {
   <section class="section cert-section">
     <h2>Other applications from the developer</h2>
     <div class="cert-container">
-  <div class="cert-item">
+      <div class="cert-item">
         <div class="info">
-          <img src="https://sf-static.upanhlaylink.com/img/image_202511235fe3447c3aa5c10eff7c6aa3ea6264f7.jpg" alt="ESign">
-          <div class="meta">
-            <div class="title">𝙃𝙏 𝙄𝙊𝙎ᯓ୨ৎ</div>
-            <div class="subtitle">No Subtitle</div>
-          </div>
-        </div>
-        <a href="https://htiospremiumv5.netlify.app/" class="cert-action"><i class="bi bi-box-arrow-up-right"></i></a>
-      </div>
-
-  <div class="cert-item">
-        <div class="info">
-          <img src="https://sf-static.upanhlaylink.com/img/image_202511250900c245a0bac8f2e1b1e838de86bdca.jpg" alt="Tạo cấu hình">
+          <img src="https://sf-static.upanhlaylink.com/img/image_2025123199ed9d4ef01bf14e45fdd96df2b10612.jpg" alt="Tạo cấu hình">
           <div class="meta">
             <div class="title">Create Configuration</div>
             <div class="subtitle">Công cụ tạo cấu hình iOS</div>
           </div>
         </div>
-        <a href="https://huutienpham35-commits.github.io/ResposityV5/" class="cert-action"><i class="bi bi-box-arrow-up-right"></i></a>
+        <a href="create-config-three.vercel.app" class="cert-action"><i class="bi bi-box-arrow-up-right"></i></a>
+      </div>
+
+  <div class="cert-item">
+        <div class="info">
+          <img src="https://sf-static.upanhlaylink.com/img/image_202512316b2ab02ddd85aaff96bb355e1701ee28.jpg" alt="ESign">
+          <div class="meta">
+            <div class="title">RemoveBackground</div>
+            <div class="subtitle">Xoá nền ảnh</div>
+          </div>
+        </div>
+        <a href="https://removebg-beryl.vercel.app/" class="cert-action"><i class="bi bi-box-arrow-up-right"></i></a>
       </div>
 
   <div class="cert-item">
