--- a/index.html
+++ b/index.html
@@ -745,8 +745,8 @@ body.dark-mode .interaction-notification {
   <nav id="mobileMenu">
     <button class="close-btn"><i class="bi bi-x-lg"></i></button>
     <a href="https://linkbio.co/HTXCheat">Main</a>
+    <a href="https://removebg-beryl.vercel.app/">AI Remove</a>
     <a href="https://pin.it/4vPAWIIoE">Album Anime</a>
-    <a href="https://linkbio.co/phuongthaoios/">Kho IPA</a>
     <a href="https://upanhlaylink.com//">Up ảnh lấy link</a>
   </nav>
 
