--- a/index.html
+++ b/index.html
@@ -742,10 +742,13 @@ body.dark-mode .interaction-notification {
     <i class="bi bi-sun-fill"></i>
 </button>
 
-  <!-- Mobile Menu -->
+   <!-- Mobile Menu -->
   <nav id="mobileMenu">
     <button class="close-btn"><i class="bi bi-x-lg"></i></button>
-    <a href="https://htiosdev.vercel.app/">Kho Hack iOS & Adr</a>
+    <a href="https://htios2590.vercel.app">Esign & Ksign</a>
+    <a href="https://htiosdev.vercel.app">Kho Hack iOS & ADR</a>
+    <a href="https://create-config-three.vercel.app/">Tạo Cấu Hình iOS</a>
+    <a href="https://tatsumaki-kohl.vercel.app/">Tatsumaki</a>
   </nav>
 
   <!-- ===== Profile ===== -->
