--- a/index.html
+++ b/index.html
@@ -937,7 +937,7 @@
           <img src="https://sf-static.upanhlaylink.com/img/image_20260116931fee6a4f31693fd1b760947690ef53.jpg" alt="DNS Icon">
           <div class="meta">
             <div class="title">DNS Chặn Thu Hồi </div>
-            <div class="subtitle">★★★★★ (8.2M)</div>
+            <div class="subtitle"></div>
           </div>
         </div>
         <div class="item-actions">
@@ -958,8 +958,8 @@
         <div class="info">
           <img src="https://sf-static.upanhlaylink.com/img/image_20260116931fee6a4f31693fd1b760947690ef53.jpg" alt="Certificate Icon">
           <div class="meta">
-            <div class="title">DownLoad Now</div>
-            <div class="subtitle">★★★★★ (9.1M)</div>
+            <div class="title">DownLoad </div>
+            <div class="subtitle"></div>
           </div>
         </div>
         <div class="item-actions">
