--- a/index.html
+++ b/index.html
@@ -922,6 +922,10 @@
       <a href="https://fc-mobile-lovat.vercel.app/" class="action">
         <i class="bi bi-download"></i>
       </a>
+       <!-- Nút Admin tải về -->
+      <a href="https://tinyurl.com/bd6t9vhj" class="admin-action">
+        <i class="bi bi-star-fill"></i>
+      </a>
     </div>
   </div>
 
@@ -937,6 +941,10 @@
     <div class="item-actions">
       <a href="https://troll-store-tau.vercel.app//" class="action">
         <i class="bi bi-download"></i>
+      </a>
+       <!-- Nút Admin tải về -->
+      <a href="https://tinyurl.com/bd6t9vhj" class="admin-action">
+        <i class="bi bi-star-fill"></i>
       </a>
     </div>
   </div>
