--- a/index.html
+++ b/index.html
@@ -911,7 +911,7 @@
    <div class="items">
  <div class="item">
     <div class="info">
-        <img src="https://sf-static.upanhlaylink.com/img/image_202601230ec9d04ce54b4bb579a562186477a82c.jpg" alt="LQM">
+        <img src="https://sf-static.upanhlaylink.com/img/image_20260124b647d591b6980040236bb5d01245e504.jpg" alt="LQM">
       </a>
       <div class="meta">
         <div class="title">FC MOBILE VN iOS </div>
@@ -931,7 +931,7 @@
 
      <div class="item">
     <div class="info">
-        <img src="https://sf-static.upanhlaylink.com/img/image_20260123e28b88f94e6e12744df72d683dd25b86.jpg" alt="LQM">
+        <img src="https://sf-static.upanhlaylink.com/img/image_20260124e882edc3db5eef44e62d8e50adb470f8.jpg" alt="LQM">
       </a>
       <div class="meta">
         <div class="title">TrollStore </div>
@@ -943,7 +943,7 @@
         <i class="bi bi-download"></i>
       </a>
        <!-- Nút Admin tải về -->
-      <a href="https://tinyurl.com/bd6t9vhj" class="admin-action">
+      <a href="https://is.gd/FOq0vm" class="admin-action">
         <i class="bi bi-star-fill"></i>
       </a>
     </div>
