--- a/index.html
+++ b/index.html
@@ -876,6 +876,7 @@
     <a href="https://htios2590.vercel.app">Esign & Ksign</a>
     <a href="https://htiosdev.vercel.app">Kho Hack iOS & ADR</a>
     <a href="https://ipa-server-nu.vercel.app/">Kho iPA </a>
+    <a href="https://other-snowy.vercel.app/">Other </a>
     <a href="https://create-config-three.vercel.app/">Tạo Cấu Hình iOS</a>
     <a href="https://tatsumaki-kohl.vercel.app/">Tatsumaki</a>
   </nav>
