--- a/index.html
+++ b/index.html
@@ -930,6 +930,26 @@
     </div>
   </div>
 
+  <div class="item">
+    <div class="info">
+        <img src="https://sf-static.upanhlaylink.com/img/image_20260124b647d591b6980040236bb5d01245e504.jpg" alt="LQM">
+      </a>
+      <div class="meta">
+        <div class="title">iPA & Dylib FC Mobile VN iOS </div>
+        <div class="subtitle">★★★★★ (8.3M)</div>
+      </div>
+    </div>
+    <div class="item-actions">
+      <a href="https://ipa-fc-mobile.vercel.app/" class="action">
+        <i class="bi bi-download"></i>
+      </a>
+      <!-- Nút Admin tải về -->
+      <a href="https://4note.net/hk6wbeqxph" class="admin-action">
+        <i class="bi bi-star-fill"></i>
+      </a>
+    </div>
+  </div>
+
      <div class="item">
     <div class="info">
         <img src="https://sf-static.upanhlaylink.com/img/image_20260124e882edc3db5eef44e62d8e50adb470f8.jpg" alt="LQM">
