--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <title>𝙃𝙏 𝙄𝙊𝙎ᯓ୨ৎ</title>
 
   <!-- Favicon -->
-  <link rel="icon" href="https://sf-static.upanhlaylink.com/img/image_2026011673a564000961f8cf3022beab02ffdc1e.jpg" type="image/jpeg">
-  <link rel="shortcut icon" href="https://sf-static.upanhlaylink.com/img/image_2026011673a564000961f8cf3022beab02ffdc1e.jpg" type="image/jpeg">
-  <link rel="apple-touch-icon" href="https://sf-static.upanhlaylink.com/img/image_2026011673a564000961f8cf3022beab02ffdc1e.jpg">
+  <link rel="icon" href="https://github.com/huutienpham35-commits/weanshhn.github.io/blob/main/img/gif/bb.gif" type="image/jpeg">
+  <link rel="shortcut icon" href="https://github.com/huutienpham35-commits/weanshhn.github.io/blob/main/img/gif/bb.gif" type="image/jpeg">
+  <link rel="apple-touch-icon" href="https://github.com/huutienpham35-commits/weanshhn.github.io/blob/main/img/gif/bb.gif">
   
   <!-- Bootstrap Icons -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
