--- a/index.html
+++ b/index.html
@@ -952,7 +952,7 @@
 
      <div class="item">
     <div class="info">
-        <img src="https://sf-static.upanhlaylink.com/img/image_20260124e882edc3db5eef44e62d8e50adb470f8.jpg" alt="LQM">
+        <img src="https://sf-static.upanhlaylink.com/img/image_20260201838ab24ce6c82155d5881c796ceede1a.jpg" alt="LQM">
       </a>
       <div class="meta">
         <div class="title">TrollStore </div>
@@ -1008,7 +1008,7 @@
           </div>
         </div>
         <div class="item-actions">
-          <a href="https://www.mediafire.com/file/fwln2vegvaxhyu0/ESignCert.zip/file" class="action">
+          <a href="https://khoindvn.io.vn/document/DNS/ESignCert.zip" class="action">
             <i class="bi bi-download"></i>
           </a>
         </div>
@@ -1021,6 +1021,21 @@
   <section class="section">
     <h2>Esign Bypass Revoke</h2>
     <div class="items">
+  <div class="item">
+        <div class="info">
+          <img src="https://sf-static.upanhlaylink.com/img/image_202511239c3c89b67d68c9108f626d76aab44cd5.jpg" alt="Esign Icon">
+          <div class="meta">
+            <div class="title">China Academy of Railway Sciences </div>
+            <div class="subtitle">★★★★★ (9.9M)</div>
+          </div>
+        </div>
+        <div class="item-actions">
+          <a href="https://api.khoindvn.io.vn/IDcW4P" class="action">
+            <i class="bi bi-download"></i>
+          </a>
+        </div>
+      </div>
+      
       <div class="item">
         <div class="info">
           <img src="https://sf-static.upanhlaylink.com/img/image_202511239c3c89b67d68c9108f626d76aab44cd5.jpg" alt="Esign Icon">
@@ -1043,6 +1058,21 @@
   <section class="section">
     <h2>Ksign Bypass Revoke</h2>
     <div class="items">
+    <div class="item">
+        <div class="info">
+          <img src="https://sf-static.upanhlaylink.com/img/image_20251123de304b11effa975dbb99a1e162dde6a7.jpg" alt="Ksign Icon">
+          <div class="meta">
+            <div class="title">China Academy of Railway Sciences </div>
+            <div class="subtitle">★★★★★ (9.8M)</div>
+          </div>
+        </div>
+        <div class="item-actions">
+          <a href="https://api.khoindvn.io.vn/03zH0o" class="action">
+            <i class="bi bi-download"></i>
+          </a>
+        </div>
+      </div>
+      
       <div class="item">
         <div class="info">
           <img src="https://sf-static.upanhlaylink.com/img/image_20251123de304b11effa975dbb99a1e162dde6a7.jpg" alt="Ksign Icon">
